LPS-94221 Fix not showing rows when a panel was open

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentsEditorSidebar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/css/FragmentsEditorSidebar.scss
@@ -7,6 +7,7 @@
 .fragments-editor-sidebar {
 	box-shadow: none;
 	height: 100vh;
+	overflow: visible;
 	padding-left: $sidebarWidth - $sidebarButtonsWidth;
 	position: fixed;
 	right: 0;
